# anywidget-cross-filter

./: .gitignore  README.md  cross_select.ipynb  cross_select.py  pyproject.toml
.ipynb_checkpoints/: cross_select-checkpoint.ipynb
